# ryzyk-fizyk

./: .env.example  .gitignore  README.md  game-rules.md  pyproject.toml
number_questions/: cli.py  config.py  csv_source.py  generator.py  llm_client.py  models.py  pool.py  web.py
question_answer_files/: ryzyk_fizyk_pytania_2000.csv  ryzyk_fizyk_pytania_400.csv  ryzyk_fizyk_pytania_800.csv
tests/: test_csv_source.py  test_generator_retry.py  test_parse_card_json.py
